# France_Data

./: .gitignore  README.md
api/: Cargo.toml
api/src/: database.rs  endpoints.rs  graphql.rs  main.rs
api/src/data_types/: insee_donnees_locales.rs  insee_time_series.rs  mod.rs  time_series.rs  world_bank.rs
api/src/graphql/: query.rs  schema.rs
api/src/models/: commune.rs  country.rs  departement.rs  mod.rs  region.rs
