[package]
name = "api"
version = "0.1.0"
authors = ["NeotenicPrimate <vladimir.g.borel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.1"
actix-cors = "0.6.0-beta.2"

juniper = "0.15.7"
juniper_actix = "0.4.0"

reqwest = "0.11.4"
html_parser = "0.6.2"

dotenv = "0.15.0"
env_logger = "0.9.0"

serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"